  * The DBG build had an invalid memory allocation instance that results in a hang when logging detection
  * Improved overall handling by reducing the items disabled on detection
- Fixes `Forced Default` Config Settings
  * Forced Defaults, typically based on firmware type, could be skipped under some circumstances
  * This gap has now been closed
- Improves `DefaultSelection` Feature
  * A substring match is now only attempted if an exact match fails
- Improves CSR Handling
  * Multiple tweaks to improve handling CSR settings
  * Includes improvements to the `DynamicCSR` feature
- Amends `ScanAllESP` Feature
  * Now aligned with upstream implementation and scans all ESPs by default
  * Hence, the "Opt-Out" `decline_esp_filter` token has been replaced by an "Opt-In `enable_esp_filter` token
  * A previous issue where the token operated the wrong way round has been fixed
- Amends `RescanDXE` Feature
  * Now does not try to dispatch additional DXE drivers by default
  * Hence, the "Opt-Out" `disable_rescan_dxe` token has been replaced by an "Opt-In `enable_rescan_dxe` token


0.13.3.AC (06 Dec 2022):
-----------------------
- Adds `NvramProtectEx` Feature
  * Extends the `NvramProtect` feature (if set) to Mac OS and `Unknown` UEFI boots
  * The feature can be enabled using a new `nvram_protect_ex` configuration token
    - Replaces the `FocusNvramFix` feature which has been removed
    - Essentially restores functionality from `EnableMacosFilter` previously replaced by `FocusNvramFix`
- Fixes `QueryVariableInfo` Handling
  * Now properly handled on `UEFI-Mac` units
  * The output is not currently presented however as Apple firmare does not return accurate information
- Fixes Misc Static Analysis Flags
  * Some are related to filesystem drivers; for which updated versions are created accordingly
- Improves 'SetVariable' Hook/Event Handling
  * Misc improvements including improved memory management
  * Relevant to the `NvramProtect` feature